# batmon

./: Cargo.toml  README.md  default.profdata  rustfmt.toml
.cargo/: config.toml
src/: lib.rs
src/cli/: args.rs  main.rs
