[package]
name = "batmon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]


dbg_println = []

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
chrono = "0.4.28"
clap = { version = "4.4.4", features = ["derive", "wrap_help", "unicode"] }
derive_more = "0.99.17"
itertools = "0.11.0"
num-traits = "0.2.16"
#plotters = { version = "0.3.5", features = ["datetime"] }
textplots = "0.8"

[lib]
name = "batmon"
path = "src/lib.rs"

[[bin]]
name = "batmon"
path = "src/cli/main.rs"

[profile.release]
lto = "fat"
opt-level = 3
overflow-checks = true
strip = true

